--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
     </style>
 </head>
 <body>
-<!--    <div id="info">
-      <button id="toggleControls" class="btn btn-secondary">回転制御: ON</button>
+  <div id="drag-overlay" class="hidden"></div>
+  <div class="container-fluid">
+    <div class="row">
+          <div class="col-sm-12">
+                <button id="toggleControls" class="btn btn-secondary">回転制御: ON</button>
+<!--    <div id="info"></div>-->
+          </div>
     </div>
--->
-      <button id="toggleControls" class="btn btn-secondary">回転制御: ON</button>
+    <div class="row">
+      <div class="col-sm-12" >
 
-    <div id="drag-overlay" class="hidden"></div>
 <!--
     <div id="controls">
        <button id="rotateF">F</button>
@@ -75,8 +79,9 @@
           </div>
         </div>
     </div>
-
-
+  </div>
+</div>
+</div>
 
     <script type="importmap">
     {
